publican/content/common/en-US/css/common.css
/* ... */
.books .pdf:hover, .books .pdf:focus {
	color:#000;
}

.books li a {
	text-decoration:none;
}

.books li a:hover {
	color:black;
}

/*products*/
.products li {
	display: block;
	width:300px;
	float:left;
}

.products li a {
	width:300px;
	padding:.5em 0em;
}

.products ul {
	clear:both;
}


/*revision history*/
.revhistory {
	display:block;
}

.revhistory table {
	background-color:transparent;
	border-color:#fff;
	padding:0em;
	margin: 0;
	border-collapse:collapse;
	border-style:none;
}

.revhistory td {
	text-align:right;
	padding:0em;
	border-top: 1px solid #fff;
}


.revhistory tr td:first-child {
	text-align:left;
}

.revhistory tr td p {
	text-align:left;
	font-weight:bold;
	display:block;
	margin:0em;
	padding:0em;
	padding-bottom:0.7em;
	border-bottom:1px solid #eee;
}

.revhistory table th {
	background-color:transparent;
	color:#336699;
	font-size:2em;
	padding: 1em 0em;
	border-bottom:1px solid #eee;
}


/*credits*/
.authorgroup div {
	clear:both;
	text-align: center;
}

h3.author {
	margin: 0em;
	padding: 0em;
	padding-top: 1em;
}

.authorgroup h4 {
	padding: 0em;
	margin: 0em;
	padding-top: 1em;
}

.author, 
.editor, 
.translator, 
.othercredit {
	display:block;
}

.othercredit h3 {
	padding-top:1em;
}


.othercredit {
	margin:0em;
	padding:0em;
}

.releaseinfo {
	clear: both;
}

.copyright {
	margin-top: 1em;
}
/* qanda sets */
.answer {
	padding-bottom:1em;
	border-bottom:1px dotted #ccc;
}

.qandaset .toc {
	border-bottom:1px dotted #ccc;
}

.question {
	font-weight:bold;
}

.answer .data, .question .data {
	padding-left: 2.6em;
}

.answer label, .question label {
	float:left;
	font-weight:bold;
}

.package {
	font-style:italic;
}

/* inline syntax highlighting */
.hl-keyword {
	color: #002F5D;
}

.hl-string {
	color: #00774B;
}

.hl-comment {
	color: #DAD9AD;
}

.hl-tag {
	color: #002F5D;
}

.hl-attribute {
	color: #a70000;
}

.hl-value {
	color: #4E376B;
}

.hl-html {
	color:#002F5D;
}

.hl-xslt {
	color: #00774B;
}

.hl-section {
	color: #00774B;
}



/*Lists*/
ul {
	padding-left:1.6em;
	list-style-image:url(../images/dot.png);
	list-style-type: circle;
}

ul ul {
	list-style-image:url(../images/dot2.png);
	list-style-type: circle;
}

ol {
	list-style-image:none;
	list-style-type: decimal;
}

dt {
	font-weight:bold;
	margin-bottom:0em;
	padding-bottom:0em;
}

dd {
	margin:0em;
	margin-left:2em;
	padding-top:0em;
}

li {
	padding-top:0px;
	margin-top:0em;
	padding-bottom:0px;
	margin-bottom:0.4em;
}

li p {
	padding-top:0px;
	margin-top:0em;
	padding-bottom:0px;
	margin-bottom:0.3em;
}

/*images*/
img {
	display:block;
	margin:2em 0;
}

.inlinemediaobject, .inlinemediaobject img {
	display:inline;
	margin:0em;
}

.figure img {
	display:block;
	margin:0;
}

.figure .title {
	margin:0em;
	margin-bottom:2em;
	padding:0px;
}

/*document modes*/
.confidential {
	background-color:#900;
	color:White;
	padding:.5em .5em;
	text-transform:uppercase;
	text-align:center;
}

.longdesc-link {
	display:none;
}

.longdesc {
	display:none;
}

.prompt {
	background-color:#ede7c8;
	padding:0em .3em;
}

/*user interface styles*/
.screen .replaceable {
	color:#444;
}

pre, code, .guibutton, .keycap, .guilabel {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
}

.guibutton, .keycap, .guilabel {
	font-weight:bold;
	white-space:nowrap;
}

.example {
	background-color:#dc9f2e;
	padding:5px;
	margin-bottom:10px;
}


/*terminal/console text*/
.computeroutput, 
.citetitle, 
.replaceable, 
.option {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
}

.replaceable {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-style: italic;
}

.command, .filename, .keycap, .classname, .literal {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-weight:bold;
}

pre {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	display:block;
	background-color:#eeeeee;
	margin-bottom: 0.3em;
	padding:.5em 1em;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
}

pre .replaceable, 
pre .keycap {
	color:white;
}

code {
	white-space: nowrap;
}

/*Notifications*/
div.note, div.important, div.warning {
	padding:1em;
	padding-bottom:20px;
	margin-top:.5em;
	margin-bottom:1.5em;
	background-repeat:no-repeat;
	background-position:1em 1em;
}

div.note pre, div.important pre, div.warning pre {
	background-color:#333;
	color:white;
}


div.note {
	background-image:url(../images/note.png);
	background-color:#8e9f00;
	color:white;
}

div.important  {
	background-color:#d08e13;
	color:white;
	background-image:url(../images/important.png);
}

div.warning {
	background-color:#9e292b;
	color:white;
	background-image:url(../images/warning.png);
}


/* Admonition Headings */
div.note h2, div.important h2, div.warning h2 {
	height:32px;
	font-size:1.3em;
}

div.note h2, div.important h2, div.warning h2 {
	color:white;
}

/* Admonition Inlines */
div.note .replaceable, div.important .replaceable,  div.warning .replaceable {
	color:#e3dcc0;
}

pre .replaceable, tt .replaceable {
	color:#444;
}

div.note .guilabel, div.important .guilabel, div.warning .guilabel {
	color:#e3dcc0;
}


/* Admonition Lists ... really? */
div.note li, div.warning li, div.important li {
	padding-left:10px;
	margin:0em;
}

div.note ul, div.warning ul, div.important ul {
	padding-left:40px;
	margin:0em;
}

/* Admonition links in verbatim ... *really* */
div.note pre pre a:visited, div.important pre pre a:visited, 
 div.warning pre pre a:visited, div.note pre a:link, div.important pre a:link, div.warning pre a:link {
	color:#0066cc;
}

/* Admonition links */
div.note a:visited, div.important a:visited, div.warning a:visited, div.note a:link , div.important a:link , div.warning a:link {
	color:#f7f2d0;
}
/* ... */

